--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -1,4 +1,5 @@
 {% extends "base_player_detail.html" %}
+{% load fastdev %}
 {% load player_extras %}
 {% load partials %}
 {% partialdef partnership-status-partial %}
@@ -14,14 +15,26 @@
                 {% if text %}{{ text }}{% endif %}
             </div>
             <div class="col">
-                {% if button %}
-                    {{ button }}
-                {% else %}
-                    ...
-                {% endif %}
-            </div>
-        </div>
+                {% ifexists button_context %}
+                <form method="post" action="{{ button_context.form_action }}">
+                    {% csrf_token %}
+                    <button type="submit"
+                            name="action"
+                            value="{{ button_context.button_submit_value }}">
+                        {{ button_context.button_content }}
+                    </button>
+                    {% ifexists button_context.input_hidden_value %}
+                    <input type="hidden"
+                           name="next"
+                           value="{{ button_context.input_hidden_value }}" />
+                {% endifexists %}
+            </form>
+        {% else %}
+            ...
+        {% endifexists %}
     </div>
+</div>
+</div>
 {% endblock partnership-status-html %}
 {% endpartialdef partnership-status-partial %}
 {% block scripts %}
