--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -16,8 +16,7 @@
         <link href="{% static "app/bridge.css" %}" rel="stylesheet">
         <link rel="icon" type="image/png" href="{% static "app/spadesuit.png" %}" />
     </head>
-    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-          {% if user.is_authenticated %}data-viewer-pk="{{ user.player.pk }}"{% endif %}>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
                 <div id="hello-user" class="navbar-brand">
