--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+    <!-- **** Begin Fork-Me-On-Gitlab-Ribbon-HTML. See MIT License at https://gitlab.com/seanwasere/fork-me-on-gitlab **** -->
+    <a href="{{ gitlab_homepage }}">
+        <span style="font-family: tahoma;
+                     font-size: 20px;
+                     position:fixed;
+                     top:150px;
+                     right:-45px;
+                     display:block;
+                     -webkit-transform: rotate(45deg);
+                     -moz-transform: rotate(45deg);
+                     background-color:red;
+                     color:white;
+                     padding: 4px 30px 4px 30px;
+                     z-index:99">Fork Me On GitLab</span>
+    </a>
+    <!-- **** End Fork-Me-On-Gitlab-Ribbon-HTML **** -->
     <p>Welcome to the bridge club.</p>
     <hr>
     <img height="628"
