If we're watching a hand whose board we've already played ...
... include a note telling us where and when

--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -54,6 +54,10 @@
 </div>
 {% ifexists card_display.current_player %}
 {% else %}
+<h4>
+    You played <a href="{% url 'app:board-archive' pk=hand.board.pk %}">this board</a>
+    at <a href="{{ hand_at_which_I_played_this_board.link }}">{{ hand_at_which_I_played_this_board.description }}</a>.
+</h4>
 <div>{% include "four-hands.html" %}</div>
 {% endifexists %}
 {% endblock content %}
