--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -69,7 +69,12 @@
     </form>
 {% endifexists %}
 {% ifexists create_synth_opponents_button %}
-{{ create_synth_opponents_button }}
+<form action="{% url 'app:player-create-synthetic-opponents' %}"
+      method="post">
+    {% csrf_token %}
+    {{ create_synth_opponents_button }}
+    <input type="hidden" name="next" value="{{ create_synth_opponents_next }}" />
+</form>
 {% endifexists %}
 {% include "pagination-controls.html" %}
 {% endblock player_list %}
