Add a title to the player_list page ...
... that describes the filtering in effect.

You could deduce this by looking at the query parameters in your browser's URL bar, but who does that?

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -7,6 +7,7 @@
 {% endblock title %}
 {% block content %}
     {% block player_list %}
+        <h3>{{ title }}</h3>
         <table id="player-list"
                class="table caption-top"
                data-players="{{ this_pages_players }}">
