--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
+{% load player_extras %}
 {% block title %}
     Hands {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ total_count }}
 {% endblock title %}
 {% block content %}
     {% block hand_list %}
         <table class="table caption-top">
-            <caption>
+            <caption style="font-size: xx-large;">
                 Hands
-                {% if player %}played by {{ player.name }},{% endif %}
+                {% if player %}played by {{ player|styled_link:user }},{% endif %}
                 {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ total_count }}
             </caption>
             <thead>
