--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -1,4 +1,5 @@
 {% load fastdev %}
+{% load player_extras %}
 {% if show_auction_history %}
     <div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
         <table class="table caption-top">
@@ -9,7 +10,7 @@
                         <th {{ player.style|safe }}>
                             <i>{{ direction }}</i>
                             <br>
-                            {{ player.player.name }}
+                            {{ player.player|styled_link:user }}
                         </th>
                     {% endfor %}
                 </tr>
