Tidy up the hand_archive page
Analagous to

    cfa662406163c4adce0420ac32fca8045a1ba70f
    Author:     Eric Hanchrow <eric.hanchrow@gmail.com>
    AuthorDate: 2025-02-02 08:28:59 -0800

    Tidy up the hand_description page

--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -5,15 +5,11 @@
 {% endblock title %}
 {% block content %}
     <div>
-        <h4>Review of {{ hand }}</h4>
-        <h4>{{ tournament_status }}</h4>
+        <h2>Review of {{ terse_description }}</h2>
         <form method="post" action="{% url 'app:new-board-plz' hand.table.pk %}">
             {% csrf_token %}
             <button class="btn btn-primary" type="submit">NEXT BOARD PLZ</button>
         </form>
-        <h2>
-            <a href="{% url 'app:board-archive' hand.board.pk %}">{{ hand.board }}</a>
-        </h2>
         <h2>{{ hand.auction.status }}</h2>
         <h1>{{ score }}</h1>
     </div>
