Do all caption styling in our CSS file.
For some reason, the change is visible when I "just dcu" but not when I "just --no-deps runme".

Perhaps it's because the CSS file is cached, and "runserver" doesn't do anything to tell the browser that its cached
copy is stale.

--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -3,7 +3,7 @@
 {% if show_auction_history %}
     <div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
         <table class="table caption-top">
-            <caption style="font-size: 2em">Auction</caption>
+            <caption>Auction</caption>
             <thead>
                 <tr>
                     {% for direction, player in history %}
