--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -21,7 +21,7 @@
     <div>
         {# TODO -- omit this if _display_and_control wouldn't let us see the cards #}
         <table class="table caption-top">
-            <caption style="font-size: 2em">Play</caption>
+            <caption>Play</caption>
             <thead>
                 <tr>
                     <th>Trick</th>
