--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load fastdev %}
+{% load static %}
 {% block title %}
     {{ hand }}
 {% endblock title %}
@@ -31,6 +32,32 @@
         <div class="col">{% include "four-hands.html" %}</div>
     {% endif %}
     <div>
+        <div class="toast-container">
+            <div id="errorToast"
+                 class="toast"
+                 role="alert"
+                 aria-live="assertive"
+                 aria-atomic="true">
+                <div class="toast-header">
+                    <svg class="bd-placeholder-img rounded me-2"
+                         width="20"
+                         height="20"
+                         xmlns="http://www.w3.org/2000/svg"
+                         aria-hidden="true"
+                         preserveAspectRatio="xMidYMid slice"
+                         focusable="false">
+                        <rect width="100%" height="100%" fill="#007aff"></rect>
+                    </svg>
+                    <strong class="me-auto">Uh oh</strong>
+                    <small>You're in trouble now</small>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="toast"
+                            aria-label="Close"></button>
+                </div>
+                <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
+            </div>
+        </div>
         <div style="font-family: monospace;
                     display: grid;
                     grid-template-columns: auto auto"
@@ -108,6 +135,16 @@ addEventListener("DOMContentLoaded", (event) =>
             auctionDiv.scroll(0, 10000);
         }
     });
+
+htmx.on("htmx:responseError", function(evt) {
+  const errorToast = document.getElementById('errorToast');
+  const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
+
+  const errorText = document.getElementById('errorText');
+  errorText.innerHTML = evt.detail.xhr.responseText;
+
+  toastBootstrap.show();
+});
 
     </script>
 {% endblock scripts %}
