Tidy up hand list

--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -16,8 +16,8 @@
                     <th>ID #</th>
                     <th>Status</th>
                     <th>Tournament</th>
-                    <th>Board</th>
                     <th>Table</th>
+                    <th>Board</th>
                     <th>players</th>
                     <th>Summary</th>
                 </tr>
@@ -41,10 +41,10 @@
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.tournament.pk }}</a>
                         </td>
                         <td>
-                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.short_string }}</a>
+                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
                         </td>
                         <td>
-                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
+                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.display_number }}</a>
                         </td>
                         <td>
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.player_names_string }}</a>
