--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -40,42 +40,30 @@
                         </td>
                         <td>
                             {% if player.action_button %}
-                                <form method="post" action="{{ player.action_button.form_action }}">
-                                    {% csrf_token %}
-                                    <button type="submit"
-                                            name="action"
-                                            value="{{ player.action_button.button_submit_value }}">
-                                        {{ player.action_button.button_content }}
-                                    </button>
-                                    {% ifexists player.action_button.input_hidden_value %}
-                                    <input type="hidden"
-                                           name="next"
-                                           value="{{ player.action_button.input_hidden_value }}" />
-                                {% endifexists %}
+                                dunno what to put here ... something about a tournament, probably
                             {% else %}
                                 <hr />
                             {% endif %}
-                        </form>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% ifexists create_synth_partner_button %}
-    <form action="{% url 'app:player-create-synthetic-partner' %}"
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% ifexists create_synth_partner_button %}
+        <form action="{% url 'app:player-create-synthetic-partner' %}"
+              method="post">
+            {% csrf_token %}
+            {{ create_synth_partner_button }}
+            <input type="hidden" name="next" value="{{ create_synth_partner_next }}" />
+        </form>
+    {% endifexists %}
+    {% ifexists create_synth_opponents_button %}
+    <form action="{% url 'app:player-create-synthetic-opponents' %}"
           method="post">
         {% csrf_token %}
-        {{ create_synth_partner_button }}
-        <input type="hidden" name="next" value="{{ create_synth_partner_next }}" />
+        {{ create_synth_opponents_button }}
+        <input type="hidden" name="next" value="{{ create_synth_opponents_next }}" />
     </form>
-{% endifexists %}
-{% ifexists create_synth_opponents_button %}
-<form action="{% url 'app:player-create-synthetic-opponents' %}"
-      method="post">
-    {% csrf_token %}
-    {{ create_synth_opponents_button }}
-    <input type="hidden" name="next" value="{{ create_synth_opponents_next }}" />
-</form>
 {% endifexists %}
 {% include "pagination-controls.html" %}
 {% endblock player_list %}
