Revert "Get rid of anything in a template or view that goes kaboom"
This reverts commit 0fe034615e2d7acbe265a0b68d9c3236e25f8539.

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -14,8 +14,26 @@
             <div class="col">
                 {% if text %}{{ text }}{% endif %}
             </div>
-            <div class="col">...</div>
-        </div>
+            <div class="col">
+                {% ifexists button_context %}
+                <form method="post" action="{{ button_context.form_action }}">
+                    {% csrf_token %}
+                    <button type="submit"
+                            name="action"
+                            value="{{ button_context.button_submit_value }}">
+                        {{ button_context.button_content }}
+                    </button>
+                    {% ifexists button_context.input_hidden_value %}
+                    <input type="hidden"
+                           name="next"
+                           value="{{ button_context.input_hidden_value }}" />
+                {% endifexists %}
+            </form>
+        {% else %}
+            ...
+        {% endifexists %}
     </div>
+</div>
+</div>
 {% endblock partnership-status-html %}
 {% endpartialdef partnership-status-partial %}
